portfolio page grid spacing is not working correctly

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -167,36 +167,41 @@ footer {
 /*can't figure out appropriate grid spacing/alignment*/
 .port-wrapper {
     clear: both;
-    position: static;
-    margin: 4%;
+    margin: 2%;
     display: grid;
     grid-template-columns: 20% 20% 60%;
     grid-template-rows: 25% 25% 25% 25%;
+    gap: 5%;
 }
 
 .cap1 {
     grid-column: 1/2;
     grid-row: 1/2;
+    border: solid;
 }
 
 .cap2 {
     grid-column: 2/3;
-    grid-row: 1/2
+    grid-row: 1/2;
+    border: solid;
 }
 
 .cap3 {
     grid-column: 1/2;
     grid-row: 2/3;
+    border: solid;
 }
 
 .cap4 {
     grid-column: 2/3;
     grid-row: 2/3;
+    border: solid;
 }
 
 .cap5 {
     grid-column: 1/2;
     grid-row: 3/4;
+    border: solid;
 }
 
 .imgp {
